tests/good/interpret/006-prod.clap
val x = { A <- 0, B <- 42 }

