tests/bad/typing/008-bad-constr-length.clap
val x : { A, A } = { A, A, A}
